Add histogram entry for GpuVideoDecoder errors.

Not sure how we missed having these logged... Adding this also required
fixing the UMA enum name to match the media/ PRESUBMIT style: must end
with _MAX and that value must be equal to the last enum value.

BUG=598456
TEST=errors show up in chrome://histograms/Media.GpuVideoDecoderError.

Review URL: https://codereview.chromium.org/1839833002

Cr-Commit-Position: refs/heads/master@{#383640}

Former-commit-id: 64739369777e41880b12fbbeb6ad2ddd31f40053